Configuracion de Cadena de Conexion

--- a/InternetBankingApp/appsettings.json
+++ b/InternetBankingApp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "conexion": "Server=MSI\\MSSQLSERVER01; Database=InternetBankingApp; Integrated Security=True; TrustServerCertificate=True;",
+    "Identityconexion": "Server=MSI\\MSSQLSERVER01; Database=InternetBankingApp; Integrated Security=True; TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
