--- a/IntenetBankingApp.Infrastructure.Identity/InternetBankingApp.Infrastructure.Identity.csproj
+++ b/IntenetBankingApp.Infrastructure.Identity/InternetBankingApp.Infrastructure.Identity.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.16">
@@ -21,10 +22,6 @@
   <ItemGroup>
     <ProjectReference Include="..\InternetBankingApp.Core.Application\InternetBankingApp.Core.Application.csproj" />
     <ProjectReference Include="..\InternetBankingApp.Core.Domain\InternetBankingApp.Core.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Entities\" />
   </ItemGroup>
 
 </Project>
