--- a/InternetBankingApp.Core.Domain/InternetBankingApp.Core.Domain.csproj
+++ b/InternetBankingApp.Core.Domain/InternetBankingApp.Core.Domain.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <Folder Include="Common\" />
+	  <Folder Include="Entities\" />
     <Folder Include="Settings\" />
   </ItemGroup>
 
