Funcion de Aciviar e Inactivar Usuarios

--- a/InternetBankingApp/appsettings.json
+++ b/InternetBankingApp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "conexion": "Server=4Y1Z2H2; Database=InternetBankingApp; Integrated Security=True; TrustServerCertificate=True;",
-    "Identityconexion": "Server=4Y1Z2H2; Database=InternetBankingApp; Integrated Security=True; TrustServerCertificate=True;"
+    "conexion": "Server=MSI\\MSSQLSERVER01; Database=InternetBankingApp; Integrated Security=True; TrustServerCertificate=True;",
+    "Identityconexion": "Server=MSI\\MSSQLSERVER01; Database=InternetBankingApp; Integrated Security=True; TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
