Creacion de Migraciones y Repositorios

--- a/InternetBankingApp.Infrastructure.Persistence/InternetBankingApp.Infrastructure.Persistence.csproj
+++ b/InternetBankingApp.Infrastructure.Persistence/InternetBankingApp.Infrastructure.Persistence.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\InternetBankingApp.Core.Domain\InternetBankingApp.Core.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
