Se Agrego la vista para mostrar la cantidad de cliente activo e inactivo.

--- a/InternetBankingApp/appsettings.json
+++ b/InternetBankingApp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "conexion": "Server=MSI\\MSSQLSERVER01;Database=InternetBankingApp;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True;",
-    "Identityconexion": "Server=MSI\\MSSQLSERVER01;Database=InternetBankingApp;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+    "conexion": "Server=4Y1Z2H2;Database=InternetBankingApp;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True;",
+    "Identityconexion": "Server=4Y1Z2H2;Database=InternetBankingApp;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
