Creacion de Estructura base de metodos y vistas para eliminar productos

--- a/InternetBankingApp/appsettings.json
+++ b/InternetBankingApp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "conexion": "Server=MSI\\MSSQLSERVER01;Database=InternetBankingApp;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True;",
-    "Identityconexion": "Server=MSI\\MSSQLSERVER01;Database=InternetBankingApp;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+    "conexion": "Server=MIGUELGR-LAPTOP;Database=InternetBankingApp;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True;",
+    "Identityconexion": "Server=MIGUELGR-LAPTOP;Database=InternetBankingApp;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
